--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,17 @@
 			<artifactId>tomcat-embed-jasper</artifactId> <!--tomcat-embed-jasper: provides support for .jsp file rendering -->
 			<scope>provided</scope>
 		</dependency>
+		<!--  <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
