--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=9005
 
 spring.mvc.view.prefix=/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/user_database
+spring.datasource.username=root
+spring.datasource.password=password
