--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,6 @@
 			<artifactId>tomcat-embed-jasper</artifactId> <!--tomcat-embed-jasper: provides support for .jsp file rendering -->
 			<scope>provided</scope>
 		</dependency>
-		<!--  <dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -70,7 +66,11 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 
 	</dependencies>
